--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 html {
-	margin: 0;
+	margin: auto;
+	padding:0;
 	font-family: 'Raleway', sans-serif;
+	background-color: #ccc;
 }
 
 ul {
@@ -14,12 +16,18 @@ li {
 	padding:10px;
 }
 
-h1 {
+h1, h3 {
 	text-align:center;
 }
 
+
 .mainContent {
 	text-align: center;
+	width: 60%;
+	background-color: #fff;
+	margin:auto;
+	padding:20px;
+	height:100%;
 }
 
 .nav {
