--- a/style.css
+++ b/style.css
@@ -1,19 +1,40 @@
 html {
 	margin: auto;
 	padding:0;
-	font-family: 'Raleway', sans-serif;
-	background-color: #ccc;
+	font-family: 'Work Sans', sans-serif;
+	background-color: #e7e7e7;
 }
 
 ul {
-	list-style-type: none;
-	margin:0;
-	padding:0;
+    list-style-type: none;
+    text-align:center;
+    /*margin: 0;*/
+    width:287px;
+    padding: 0;
+    overflow: hidden;
+    border: 1px solid #e7e7e7;
+    background-color: #f3f3f3;
 }
 
 li {
-	display: inline;
-	padding:10px;
+    float: left;
+}
+
+li a {
+    display: block;
+    color: #666;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #ddd;
+}
+
+li a.active {
+    color: white;
+    background-color: #4CAF50;
 }
 
 h1, h3 {
