--- a/style.css
+++ b/style.css
@@ -1,25 +1,49 @@
+/* CSS RESET */
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:none}table{border-collapse:collapse;border-spacing:0}
+/* END CSS RESET */
+
+/* General Styles */
 html {
 	margin: auto;
 	padding:0;
 	font-family: 'Work Sans', sans-serif;
 	background-color: #e7e7e7;
 }
+body {
+    font-size: 16px;
+}
+h1 {
+    font-size: 36px;
+}
+h2 {
+    font-size: 28px;
+}
+h3 {
+    font-size: 24px;
+}
+h4 {
+    font-size: 18px;
+}
+.width-control {
+    max-width: 1000px;
+    margin: auto;
+}
+.width-control.padding {
+    width: calc(100% - 40px);
+}
+/* End General Styles */
 
-ul {
-    list-style-type: none;
-    text-align:center;
-    /*margin: 0;*/
-    width:287px;
-    padding: 0;
-    overflow: hidden;
-    border: 1px solid #e7e7e7;
+/* Navigation Bar */
+nav {
+    margin: 0;
+    text-align: center;
+    display: flex;
+    justify-content: center;
     background-color: #f3f3f3;
 }
-
 li {
     float: left;
 }
-
 li a {
     display: block;
     color: #666;
@@ -27,34 +51,49 @@ li a {
     padding: 14px 16px;
     text-decoration: none;
 }
-
-li a:hover:not(.active) {
+li a:hover {
     background-color: #ddd;
 }
-
 li a.active {
-    color: white;
-    background-color: #4CAF50;
+    font-weight: 700;
 }
+/* End Navigation Bar */
 
-h1, h3 {
-	text-align:center;
+/* Home Page */
+.hero {
+    background: url('img/gopher.jpg') no-repeat center / cover;
 }
-
-
-.mainContent {
-    text-align: center;
-    width: calc(100% - 40px);
-    max-width: 1000px;
-	background-color: #fff;
-	margin:auto;
-	padding:20px;
-	height:100%;
-}
-
-.nav {
-	margin:0;
-    text-align:center;
+.hero .caption {
+    max-height: 600px;
+    height: 50vw;
     display: flex;
-    justify-content: center;
+    align-items: center;
 }
+.hero .caption h1 {
+    font-size: 48px;
+    color: #fff;
+}
+.content {
+    padding: 40px 0;
+}
+/* End Home Page */
+
+/* Mobile Styles */
+@media (max-width: 768px) {
+    h1 {
+        font-size: 30px;
+    }
+    h2 {
+        font-size: 24px;
+    }
+    h3 {
+        font-size: 20px;
+    }
+    .hero .caption h1 {
+        font-size: 32px;
+    }
+    .content {
+        padding: 30px 0;
+    }
+}
+/* End Mobile Styles */
