--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 /* General Styles */
 html {
-	margin: auto; /* lexie branch */
+	margin: auto;
 	padding:0;
 	font-family: 'Work Sans', sans-serif;
 	background-color: #e7e7e7;
