Jadryan Bio & Skill Set

--- a/style.css
+++ b/style.css
@@ -15,6 +15,18 @@ body {
 p {
     padding: 10px 0;
 }
+strong {
+    font-weight: bold;
+}
+ul {
+    display: block;
+    padding: 5px 0;
+}
+li {
+    list-style-type: disc;
+    margin-left: 30px;
+    display: list-item;
+}
 h1 {
     font-size: 36px;
 }
@@ -44,20 +56,20 @@ nav {
     justify-content: center;
     background-color: #f3f3f3;
 }
-li {
+nav li {
     float: left;
 }
-li a {
+nav li a {
     display: block;
     color: #666;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
 }
-li a:hover {
+nav li a:hover {
     background-color: #ddd;
 }
-li a.active {
+nav li a.active {
     font-weight: 700;
 }
 /* End Navigation Bar */
